feat: Impl mocked POST /login endpoint
